# withings2weeks

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/withings2weeks/: cli.py  config.py  measure_client.py  oauth_client.py  weeks.py
tests/: sample_weights.csv  test_measure_pagination.py  test_measure_transform.py  test_measure_weekly_pivot.py  test_oauth.py  test_weekly.py  test_weeks.py
