[project]
name = "withings-export-2-pivot"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cyclopts>=4.0.0",
    "pandas>=2.3.3",
    "odfpy>=1.4.1",
    "pydantic>=2.8.0",
]

[project.scripts]
withings2weeks = "withings2weeks.cli:app"

[tool.pytest.ini_options]
addopts = "-q"
python_files = ["test_*.py"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250926",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/withings2weeks"]

[tool.ruff]
target-version = "py313"  # Ruff not updated for 3.14 yet
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "S",  # flake8-bandit
    "C4", # flake8-comprehensions
    "PL", # pylint rules subset
    "RET",# flake8-return
    "SIM",# flake8-simplify
]

[tool.mypy]
python_version = "3.14"
strict = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
packages = ["withings2weeks"]
explicit_package_bases = true
