[project]
name = "withings2weeks"
version = "0.2.0"
description = "A simple Withings Scale data exporter to week-summarized spreadsheet/stdout."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cyclopts>=4.0.0",
    "pandas>=2.3.3",
    "odfpy>=1.4.1",
    "pydantic>=2.8.0",
    "requests>=2.32.0",
]

[project.scripts]
withings2weeks = "withings2weeks.cli:app"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250926",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
    "types-requests>=2.32.0.20241016",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/withings2weeks"]

[tool.ruff]
target-version = "py313"  # Ruff not updated for 3.14 yet
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "PLE", # pylint rules subset
    "PLW", # pylint rules subset
    "RET",# flake8-return
    "SIM",# flake8-simplify
]
ignore = [
    "F821",  # undefined name (ruff does not know 3.14 has __future__ annotations by default)
]

[tool.mypy]
python_version = "3.14"
strict = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
packages = ["withings2weeks"]
explicit_package_bases = true
